Fix Mobile Homepage Alignment
Fixed Mobile Homepage Alignment and Styling.

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ body {
     font-family: "Poppins", sans-serif;
     color: #363636;
     max-width: 412px;
+    min-width: 412px;
 }
 
 @font-face {
@@ -83,13 +84,15 @@ button {
     bottom: 0;
     left: 0px;
     margin: 0px 20px;
-    width: 154px;
+    width: 180px;
     cursor: pointer;
     font-size: 20px;
     background-color: orange;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     color: #363636;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
 }
 
 
@@ -106,13 +109,11 @@ button {
     background-color: #651799;
     height: 100px;
     position: relative;
-    
 }
  
  #main-nav input, #burger-con {
     display: none;
  }
-
 
  #main-nav label img {
     width: 30px;
@@ -136,20 +137,17 @@ button {
     transform: rotate(90deg);
  }
 
-
  #main-nav ul {
     list-style: none;
-    padding: 0;
-    margin: 0;
     background-color: #941ED6;
-    width: 100%;
     margin-top: 22px;
-
+    padding: 0;
  }
  
  #main-nav ul li a {
     display: block;
-    padding: 7px 0 10px 20px;
+    padding-top: 7px;
+    padding-bottom: 10px;
     text-align: center;
     text-decoration: none;
     color: #ffffff;
@@ -158,16 +156,12 @@ button {
     font-weight: 600;
  }
 
- #main-nav ul li a:hover {
-    text-decoration: underline;
- }
+ #main-nav ul li:first-child {
+    padding-top: 15px;
+ } 
 
  #main-nav ul li:last-child {
     padding-bottom: 20px;
- } 
-
- #main-nav ul li:first-child {
-    padding-top: 15px;
  } 
 
 
@@ -178,6 +172,7 @@ button {
     background-image: url('../images/home_header_412.png');
     background-size: cover;
     height: 529px;
+    cursor: pointer;
 }
 
 /* Features Section */
@@ -197,12 +192,13 @@ button {
 }
 
 .feature_icon {
-    width: 105px;
+    max-width: 105px;
+    margin-bottom: 8px;
 }
 
 #features h3 {
     font-family: "Stopbuck", sans-serif;
-    font-size: 32px;
+    font-size: 30px;
     letter-spacing: 1px;
     max-width: 180px;
     margin-top: 25px;
@@ -255,8 +251,14 @@ button {
 
 #product-title p {
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 600;
     margin-top: -35px;
+}
+
+.product p {
+    font-size: 15px;
+    font-weight: 800;
+    line-height: 20px;
 }
 
 
@@ -437,7 +439,6 @@ button {
     background-size: cover;
     height: 500px;
     overflow: hidden;
-
 }
 
 #reviews-title h2 {
@@ -446,6 +447,7 @@ button {
     text-transform: uppercase;
     color: white;
     text-align: center;
+    margin-bottom: -30px;
 }
 
 #reviews-title-con {
@@ -457,6 +459,7 @@ button {
     color: white;
     font-size: 18px;
     text-align: center;
+    margin-top: 30px;
 }
 
 #reviews-wrapper {
@@ -474,8 +477,8 @@ button {
     width: 160px; 
     flex-shrink: 0;
     margin: 0 10px 0 10px;
-    padding: 10px;
-    text-align: center;
+    padding: 6px;
+    padding-left: 20px;
 }
 
 #reviews article p {
@@ -516,13 +519,16 @@ button {
     cursor: pointer;
     border-radius: 15px;
     font-family: "Poppins", sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    width: 75px;
 }
 
-#prev-btn:hover,
+/* #prev-btn:hover,
 #next-btn:hover {
     background-color: #CC173A;
     color: #fff;
-}
+} */
 
 /* Merch Section */
 
@@ -540,11 +546,15 @@ button {
 }
 
 .merch p, .merch-title {
-    text-align: center;
     margin: 0;
-    margin-left: 30px;
-    padding: 0;
-    font-size: 90%;
+    margin-left: 25px;
+    font-size: 14px;
+    font-weight: 800;
+}
+
+.merch p {
+    width: 140px;
+    padding-right: 50px;
 }
 
 .merch button {
@@ -568,16 +578,11 @@ button {
 .merch img {
     width: 150px;
     margin: 10px 20px 0px 20px;
-
 }
 
 .merch-title {
     max-width: 110px;
-    padding-left: 20px;
-}
-
-.merch {
-    width: 150px;
+    padding-left: 10px;
 }
 
 /* Available Stores Section */
@@ -706,6 +711,7 @@ button {
     list-style: none;
     padding: 0;
     text-align: left;
+    text-align: center;
 }
 
 #footer-nav li,
@@ -988,6 +994,10 @@ button {
     body {
         max-width: 1200px;
         margin: 0 auto; /* Center content */
+    }
+
+    #main-nav ul li a:hover {
+        text-decoration: underline;
     }
 
     /* CUSTOMER REVIEW SECTION */
